<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake product data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all products data in the app  -->
    <string name="action_delete_all_products">Delete All Products</string>

    <!-- Title for the activity to add a new product-->
    <string name="activity_title_new_products">Add a Product</string>

    <!-- Title for the activity to edit a product -->
    <string name="activity_title_edit_products">Edit a Product</string>

    <!-- Label for editor menu option to save product and leave editor -->

    <!-- Label for editor menu option that deletes the current product -->
    <string name="action_delete">Delete</string>

    <!-- Label for category of attributes in the editor  -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for supplier name field in the editor -->
    <string name="hint_supplier_name">Supplier Name (Optional)</string>

    <string name="category_suppliers_info">Supplier Info</string>

    <!-- Text hint for name field in the editor -->
    <string name="hint_product_name">Product Name</string>

    <!-- Text hint for price field in the editor  -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for quantity field in the editor-->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Units for price of the product (Dollar) -->
    <string name="unit_product_price">$</string>

    <!--Text hint for supplier phone number field in the editor -->
    <string name="hint_product_supplier_phone">Supplier Phone Number (Optional)</string>

    <string name="product_saved_message">"Product Saved</string>

    <string name="product_not_saved_message">"Error with Saving Product !!"</string>

    <string name="name_validation_error_message">Name field can\'t be null.</string>

    <string name="fields_validation_error_message">Complete All Field before Saving.</string>

    <string name="no_deleted_products">No Products Deleted</string>

    <string name="deleted_products">%1d Products Deleted</string>

    <!-- Title text for the empty view, which describes the empty stock house -->
    <string name="empty_view_title_text">There\'s no Products here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product -->
    <string name="empty_view_subtitle_text">Get started by adding a Product</string>

    <string name="editor_update_product_failed">Failed to Update Product Info</string>

    <string name="editor_update_product_successful">Product Updated Successfully</string>

    <string name="unsaved_changes_dialog_msg">Changes doesn\'t saved. Do you want to discard your changes ?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted -->

    <!-- Dialog message to ask the user to confirm deleting the current product -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product  -->
    <string name="cancel">Cancel</string>

    <string name="category_product_image">Product Image</string>

    <string name="in_stock">In Stock : %1d pieces</string>

    <string name="product_out_of_stock">Product not In Stock</string>

    <string name="product_bought_successfully">Product is Bought Successfully</string>

    <string name="reject_product">Reject Product</string>

    <string name="add_product">Add Product</string>

    <string name="contact_supplier">Contact Supplier</string>

    <string name="default_phone_number">000 0000 0000</string>
</resources>