<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:orientation="horizontal"
    android:layout_margin="6dp"
    android:background="@drawable/customborder"
    android:descendantFocusability="blocksDescendants"
    >
    
    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:src="@drawable/empty_stock_640"
        android:scaleType="fitCenter"
        android:padding="2dp"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:padding="@dimen/small_padding_size">

        <TextView
            android:id="@+id/product_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_product_name"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/product_name_text_size"
            android:textColor="@color/colorAccent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/supplier_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name_text_view"
            android:layout_centerVertical="true"
            android:text="@string/hint_supplier_name"
            android:textSize="@dimen/supplier_name_text_size"
            android:textColor="@android:color/darker_gray"
            />

        <TextView
            android:id="@+id/product_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/unit_product_price"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/numbers_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/product_quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_stock"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/numbers_text_size"
            android:textStyle="bold"/>



    </RelativeLayout>

    <ImageButton
        android:id="@+id/buy_image_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@null"
        android:src="@drawable/buy_icon"/>

</LinearLayout>